chore/fix: use URI#toURL instead of deprecated URL constructor